# lina-marie-pdf-comparison

./: .gitignore  README.md  pyproject.toml
bases_vectorielles/ocr/: ocr_ancien.pkl  ocr_nouveau.pkl
louis/: RESULT.md  RESULT_2.md  main.ipynb
louis/saves/chunks/: ancien_chunks.pkl  nouveau_chunks.pkl
louis/saves/chunks/title_chunks/: ancien_chunks.pkl  ancien_pages.pkl  nouveau_chunks.pkl  nouveau_pages.pkl
louis/saves/docs_text/: ancien.txt  nouveau.txt
louis/saves/embeddings/: ancien_embeddings.pkl  nouveau_embeddings.pkl
louis/saves/embeddings/title_chunks/: ancien_embeddings.pkl  nouveau_embeddings.pkl
louis/saves/faiss_indexes/: new_indexes.pkl  old_indexes.pkl
stephen/: main.ipynb
